<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="JORGE APP"/>

    <EditText
        android:id="@+id/activity_main_txtUser"
        android:inputType="text"
        android:hint="@string/user"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/activity_main_txtPassword"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textAlignment="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_txtUser"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/activity_main_btnLogin"
        android:text="@string/button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_txtPassword"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/activity_main_btnRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_btnLogin"
        android:layout_margin="15dp"
        android:text="@string/button_register"

        />








</androidx.constraintlayout.widget.ConstraintLayout>


